--- a/src/components/Header/Navbar.astro
+++ b/src/components/Header/Navbar.astro
@@ -1,5 +1,5 @@
 ---
-import '@fontsource/ropa-sans/400.css';
+import '@fontsource/ropa-sans';
 ---
 
 <nav
@@ -29,7 +29,7 @@ import '@fontsource/ropa-sans/400.css';
         </div>
         <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1 md:me-[86px]"
             id="navbar-sticky">
-            <ul class="flex flex-col p-4 md:p-[0.5rem] mt-4 font-medium md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 border border-white rounded-full">
+            <ul class="flex flex-col p-4 md:px-[1rem] md:py-2 md:gap-x-5 mt-4 font-medium md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 border border-white rounded-full">
                 <li>
                     <a href="#" class="block py-2 px-3 text-white md:p-0 uppercase" aria-current="page">Inicio</a>
                 </li>
