--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Header from "../components/Header/Header.astro";
+import '@fontsource/nunito-sans';
 
 ---
 
@@ -18,11 +19,17 @@ import Header from "../components/Header/Header.astro";
 		font-family: "Radwave";
 	}
 
+	.font-nunito {
+		font-family: "Nunito Sans";
+	}
+
 	.stroke-1px-white {
 		-webkit-text-stroke: 1px white;
 	}
 
 	.title {
 		font-size: 3.8rem;
+		line-height: 60.25px;
 	}
+
 </style>
