--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,9 +1,29 @@
-.relative.container {
-    content: "";
-    width: 100%;
-    height: 200px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    background-image: linear-gradient(to top, #1746a2, transparent);
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+@layer utilities {
+    .container-image-mobile::after {
+        content: "";
+        position: absolute;
+        width: 100vw;
+        height: 100vh;
+        left: 0;
+        bottom: 0;
+        background: linear-gradient(180deg, rgba(0, 0, 0, 0.1892) 29.21%, rgba(0, 0, 0, 0.86) 72.6%),
+        linear-gradient(89.95deg, rgba(0, 0, 0, 0) 20.29%, rgba(255, 255, 255, 0.16) 95.89%);
+
+    }
+
+    .container-image::after {
+        content: "";
+        position: absolute;
+        width: 100vw;
+        height: 100vh;
+        left: 0;
+        bottom: 0;
+        background: linear-gradient(270deg, rgba(0, 0, 0, 0.1892) 32.32%, rgba(0, 0, 0, 0.86) 100%),
+            linear-gradient(89.95deg, rgba(0, 0, 0, 0) 20.29%, rgba(255, 255, 255, 0.16) 95.89%);
+    }
 }
