--- a/src/components/Header/Navbar.astro
+++ b/src/components/Header/Navbar.astro
@@ -5,7 +5,7 @@ import '@fontsource/ropa-sans';
 <nav
     class="absolute w-full z-20 top-0 start-0"
 >
-    <div class="max-w-screen-3xl flex flex-wrap items-center justify-between mx-auto py-4 px-10">
+    <div class="max-w-screen-3xl flex flex-wrap items-center justify-between mx-auto py-2 lg:py-4 px-5 lg:px-10">
         <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
             <img
                 src="./logo.png"
@@ -22,14 +22,14 @@ import '@fontsource/ropa-sans';
                 aria-expanded="false"
             >
                 <span class="sr-only">Abrir</span>
-                <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg width="50" height="50" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M1.4375 7.625C1.25516 7.625 1.0803 7.55256 0.951364 7.42363C0.822433 7.2947 0.75 7.11983 0.75 6.9375V1.43887C0.75 1.25654 0.822433 1.08167 0.951364 0.952737C1.0803 0.823806 1.25516 0.751373 1.4375 0.751373H6.9375C7.11984 0.751373 7.2947 0.823806 7.42364 0.952737C7.55257 1.08167 7.625 1.25654 7.625 1.43887V6.9375C7.625 7.11983 7.55257 7.2947 7.42364 7.42363C7.2947 7.55256 7.11984 7.625 6.9375 7.625H1.4375ZM11.0625 7.625C10.8802 7.625 10.7053 7.55256 10.5764 7.42363C10.4474 7.2947 10.375 7.11983 10.375 6.9375V1.43887C10.375 1.25654 10.4474 1.08167 10.5764 0.952737C10.7053 0.823806 10.8802 0.751373 11.0625 0.751373H16.5611C16.7435 0.751373 16.9183 0.823806 17.0473 0.952737C17.1762 1.08167 17.2486 1.25654 17.2486 1.43887V6.9375C17.2486 7.11983 17.1762 7.2947 17.0473 7.42363C16.9183 7.55256 16.7435 7.625 16.5611 7.625H11.0625ZM1.4375 17.25C1.25516 17.25 1.0803 17.1776 0.951364 17.0486C0.822433 16.9197 0.75 16.7448 0.75 16.5625V11.0625C0.75 10.8802 0.822433 10.7053 0.951364 10.5764C1.0803 10.4474 1.25516 10.375 1.4375 10.375H6.9375C7.11984 10.375 7.2947 10.4474 7.42364 10.5764C7.55257 10.7053 7.625 10.8802 7.625 11.0625V16.5625C7.625 16.7448 7.55257 16.9197 7.42364 17.0486C7.2947 17.1776 7.11984 17.25 6.9375 17.25H1.4375ZM11.0625 17.25C10.8802 17.25 10.7053 17.1776 10.5764 17.0486C10.4474 16.9197 10.375 16.7448 10.375 16.5625V11.0625C10.375 10.8802 10.4474 10.7053 10.5764 10.5764C10.7053 10.4474 10.8802 10.375 11.0625 10.375H16.5611C16.7435 10.375 16.9183 10.4474 17.0473 10.5764C17.1762 10.7053 17.2486 10.8802 17.2486 11.0625V16.5625C17.2486 16.7448 17.1762 16.9197 17.0473 17.0486C16.9183 17.1776 16.7435 17.25 16.5611 17.25H11.0625Z" fill="white"/>
                 </svg>
             </button>
         </div>
         <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1 md:me-[86px]"
             id="navbar-sticky">
-            <ul class="flex flex-col p-4 md:px-[1rem] md:py-2 md:gap-x-5 mt-4 font-medium md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 border border-white rounded-full">
+            <ul class="flex flex-col p-4 md:px-[1rem] md:py-2 gap-x-0 md:gap-x-5 mt-4 text-xs lg:font-medium md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 border border-white rounded-full">
                 <li>
                     <a href="#" class="block py-2 px-3 text-white md:p-0 uppercase" aria-current="page">Inicio</a>
                 </li>
