header swiper intento

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -13,7 +13,7 @@ const pagination = [
 
 <header>
     <Navbar />
-    <div class="absolute w-screen h-screen overflow-hidden">
+    <div class="w-screen h-screen overflow-hidden">
         <Slides />
         <div class="absolute bottom-0 z-10 flex flex-col lg:flex-row justify-center items-end">
             {pagination.map( pag =>
@@ -22,7 +22,3 @@ const pagination = [
         </div>
     </div>
 </header>
-
-
-
-
