feat: agrega section 1

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,16 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Header from "../components/Header/Header.astro";
+import Section1 from "../components/Section1.astro";
 import '@fontsource/nunito-sans';
+import '@fontsource/nunito-sans/900.css';
+import '@fontsource/nunito-sans/300.css';
 
 ---
 
 <Layout title="Geoturismo Contrafuerte" description="Este patrimonio geológico natural de extraordinaria belleza y atractivo, es considerado una de las rutas imperdibles en el país, ha sido protagonista de 3 importantes erupciones en los últimos 100 años, 1921, 1960, 2011, siendo además uno de los principales sitios de exploración geotérmica de Chile.">
 	<Header />
+	<Section1 />
 </Layout>
 
 <style is:global>
@@ -25,6 +29,9 @@ import '@fontsource/nunito-sans';
 
 	.stroke-1px-white {
 		-webkit-text-stroke: 1px white;
+	}
+	.stroke-1px-grey {
+		-webkit-text-stroke: 1.5px #4F4F4F;
 	}
 
 </style>
