--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,12 +5,14 @@ import Section1 from "../components/Section1.astro";
 import '@fontsource/nunito-sans';
 import '@fontsource/nunito-sans/900.css';
 import '@fontsource/nunito-sans/300.css';
+import Section2 from "../components/Section2.astro";
 
 ---
 
 <Layout title="Geoturismo Contrafuerte" description="Este patrimonio geológico natural de extraordinaria belleza y atractivo, es considerado una de las rutas imperdibles en el país, ha sido protagonista de 3 importantes erupciones en los últimos 100 años, 1921, 1960, 2011, siendo además uno de los principales sitios de exploración geotérmica de Chile.">
 	<Header />
 	<Section1 />
+	<Section2 />
 </Layout>
 
 <style is:global>
