--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -11,7 +11,7 @@ const pagination = [
 ]
 ---
 
-<header>
+<header class="overflow-hidden">
     <Navbar />
     <div class="w-screen h-screen overflow-hidden">
         <Slides />
