--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import '@fontsource/nunito-sans';
 import '@fontsource/nunito-sans/900.css';
 import '@fontsource/nunito-sans/300.css';
 import Section2 from "../components/Section2.astro";
+import Section3 from "../components/Section3/Section3.astro";
 
 ---
 
@@ -13,9 +14,13 @@ import Section2 from "../components/Section2.astro";
 	<Header />
 	<Section1 />
 	<Section2 />
+	<Section3 />
 </Layout>
 
 <style is:global>
+	body {
+		background-color: #F4F4F4;
+	}
 	@font-face {
 		font-family: "Radwave";
 		src: url("/font/RadwaveFont.otf") format("opentype");
