--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import '@fontsource/nunito-sans/900.css';
 import '@fontsource/nunito-sans/300.css';
 import Section2 from "../components/Section2.astro";
 import Section3 from "../components/Section3/Section3.astro";
+import Slides from "../components/Section4/Slide";
 
 ---
 
@@ -15,6 +16,7 @@ import Section3 from "../components/Section3/Section3.astro";
 	<Section1 />
 	<Section2 />
 	<Section3 />
+	<Slides client:load/>
 </Layout>
 
 <style is:global>
