--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import '@fontsource/nunito-sans/300.css';
 import Section2 from "../components/Section2.astro";
 import Section3 from "../components/Section3/Section3.astro";
 import Slides from "../components/Section4/Slide";
+import Section5 from "../components/Section5/Section5.astro";
 
 ---
 
@@ -17,6 +18,7 @@ import Slides from "../components/Section4/Slide";
 	<Section2 />
 	<Section3 />
 	<Slides client:load/>
+	<Section5 />
 </Layout>
 
 <style is:global>
