--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import Section2 from "../components/Section2.astro";
 import Section3 from "../components/Section3/Section3.astro";
 import Slides from "../components/Section4/Slide";
 import Section5 from "../components/Section5/Section5.astro";
+import Section6 from "../components/Section6/Section6.astro";
 
 ---
 
@@ -19,6 +20,7 @@ import Section5 from "../components/Section5/Section5.astro";
 	<Section3 />
 	<Slides client:load/>
 	<Section5 />
+	<Section6 />
 </Layout>
 
 <style is:global>
