--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,8 @@ import Section3 from "../components/Section3/Section3.astro";
 import Slides from "../components/Section4/Slide";
 import Section5 from "../components/Section5/Section5.astro";
 import Section6 from "../components/Section6/Section6.astro";
+import Frame from "../components/Frame.astro";
+import Footer from '../components/Footer.astro'
 
 ---
 
@@ -21,6 +23,8 @@ import Section6 from "../components/Section6/Section6.astro";
 	<Slides client:load/>
 	<Section5 />
 	<Section6 />
+	<Frame />
+	<Footer />
 </Layout>
 
 <style is:global>
