--- a/src/components/Section6/Section6.astro
+++ b/src/components/Section6/Section6.astro
@@ -2,7 +2,7 @@
 import Title from '../Title.astro';
 import Slides from './Slides.jsx';
 ---
-<div class="text-center">
+<div class="text-center pb-10">
     <div class="border-[#4A5E73] border-b-[10px] px-10 mb-10 inline-block">
         <Title title="Galería" />
     </div>
