--- a/src/components/Section3/Section3.astro
+++ b/src/components/Section3/Section3.astro
@@ -1,25 +1,119 @@
 ---
+import Button from "../Button.astro";
 import Title from "../Title.astro";
 import Card from "./Card.astro";
 
 const cards = [
-    { url: '/card1.png', title: 'Aguas Termales', text: 'Las aguas termales son el resultado entre el agua subterránea y las condiciones geotérmicas, lo que les confiere sus propiedades terapéuticas y las convierte en un atractivo natural para quienes buscan relajación y bienestar.', button: '' },
-    { url: '/card2.png', title: 'Cordón Caulle', text: 'El Cordón Caulle es el mayor Sistema Geotermal activo de la zona volcánica Sur. Su última erupción fué el 04 de junio del 2011 expulsando ceniza y piedra pómez formando una columna de 10 kms de altura.', button: '' },
-    { url: '/card3.png', title: 'Volcán Puyehue', text: 'Descubre la majestuosidad del volcán y aventúrate por paisajes impresionantes y  vistas panorámicas. Ideal para los amantes del trekking y la naturaleza.', button: '' }
-]
+    {
+        url: "/card1.png",
+        urlHover: "/card1-hover.png",
+        title: "Aguas Termales",
+        text: "Las aguas termales son el resultado entre el agua subterránea y las condiciones geotérmicas, lo que les confiere sus propiedades terapéuticas y las convierte en un atractivo natural para quienes buscan relajación y bienestar.",
+        button: {
+            title: "Aguas termales",
+            img: "/s1.jpg",
+            id: 'card1'
+        },
+    },
+    {
+        url: "/card2.png",
+        urlHover: "/card2-hover.png",
+        title: "Cordón Caulle",
+        text: "El Cordón Caulle es el mayor Sistema Geotermal activo de la zona volcánica Sur. Su última erupción fue el 04 de junio del 2011 expulsando ceniza y piedra pómez formando una columna de 10 kms de altura.",
+        button: {
+            title: "Volcán",
+            img: "/s2.jpg",
+            id: 'card2'
+        },
+    },
+    {
+        url: "/card3.png",
+        urlHover: "/card3-hover.png",
+        title: "Volcán Puyehue",
+        text: "Descubre la majestuosidad del volcán y aventúrate por paisajes impresionantes y vistas panorámicas. Ideal para los amantes del trekking y la naturaleza.",
+        button: {
+            title: "Cordón del Caulle",
+            img: "/s3.jpg",
+            id: 'card3'
+        },
+    },
+];
 ---
 
-<div class="px-10 pb-20">
+<div class="px-10 pb-20" id="cont-principal">
     <div class="border-[#54574E] border-t-[10px] max-w-[600px] pt-5">
-        <span class="font-nunito uppercase font-black text-[#54574E] text-[1.3rem]">Aventúrate&nbsp;</span>
+        <span
+            class="font-nunito uppercase font-black text-[#54574E] text-[1.3rem]"
+            >Aventúrate&nbsp;</span
+        >
         <Title title="Atractivos" />
     </div>
 
     <div class="flex gap-x-10 justify-center pt-10">
-        { cards.map( card => {
-            return(
-                <Card url={card.url} title={card.title} text={card.text} button={card.button}/>
-            )
-        })}
+        {
+            cards.map((card) => (
+                <Card
+                    url={card.url}
+                    title={card.title}
+                    text={card.text}
+                    urlHover={card.urlHover}
+                    button={card.button}
+                />
+            ))
+        }
     </div>
 </div>
+
+<div id='cont-img' class="relative hidden overflow-hidden">
+    <div class="absolute left-0 top-0 w-full h-full">
+        <div class="relative flex justify-center w-full h-full overflow-hidden">
+            <div class="absolute inset-0 bg-gradient-to-r from-black/50 to-transparent z-10"></div>
+            <video class="absolute top-0 left-0 w-full h-full object-cover" muted loop autoplay></video>
+            <div class="absolute pt-10 inset-0 z-20 ">
+                <svg class="px-[3.8rem]" width="498" height="8" viewBox="0 0 498 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect x="498" y="3.05176e-05" width="8.00002" height="498" transform="rotate(90 498 3.05176e-05)" fill="white"/>
+                </svg>
+                <p class="px-[3.8rem] pt-2 text-white font-nunito uppercase font-semibold">Disfruta diferentes atractivos</p>
+                <h2 class="px-[3.8rem] flex font-radwave text-transparent stroke-1px-white leading-10 sm:leading-[60px] text-[1.2rem] sm:text-[2rem] lg:text-[3rem]" id="img-title"></h2>
+            </div>
+            <button class="absolute bottom-1/2 left-[3.8rem] transform -translate-y-1/2 z-20" id="btn-regresar">
+                <svg width="64" height="60" viewBox="0 0 64 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect x="63.5" y="59.5" width="63" height="59" rx="29.5" transform="rotate(180 63.5 59.5)" stroke="white"/>
+                    <path d="M40 29L40 31L28 31L33.5 36.5L32.08 37.92L24.16 30L32.08 22.08L33.5 23.5L28 29L40 29Z" fill="white"/>
+                </svg>
+            </button>
+        </div>
+    </div>
+</div>
+
+<script>
+    const resources = {
+        'card1' : { title: "Aguas termales", img: "/1.mp4" },
+        'card2' : { title: "Volcán", img: "/2.mp4" },
+        'card3' : { title: "Cordón del Caulle", img: "/3.mp4" }
+    }
+    const idButtons = Object.keys(resources);
+
+    const divPrincipal = document.getElementById('cont-principal');
+    const heightContPrincipal = divPrincipal.offsetHeight;
+    const divImg = document.getElementById('cont-img');
+    divImg.style.height = `${heightContPrincipal}px`;
+
+    idButtons.forEach( button => {
+        const elemButton = document.getElementById(button);
+        elemButton.addEventListener('click', function () {
+            divPrincipal.classList.toggle('hidden');
+            divImg.classList.toggle('hidden');
+            divImg.querySelector('video').src = resources[button].img;
+            divImg.scrollIntoView({ behavior: 'smooth' });
+            divImg.querySelector('#img-title').innerHTML = resources[button].title;
+        })
+    })
+
+    const btnRegresar = document.getElementById('btn-regresar');
+    btnRegresar.addEventListener('click', function () {
+        divPrincipal.classList.toggle('hidden');
+        divImg.classList.toggle('hidden');
+    })
+
+</script>
