fix: cambio de ruta en imagen

--- a/src/components/Section3/Section3.astro
+++ b/src/components/Section3/Section3.astro
@@ -89,8 +89,8 @@ const cards = [
 <script>
     const resources = {
         'card1' : { title: "Aguas termales", img: "/1.mp4" },
-        'card2' : { title: "Volcán", img: "/2.mp4" },
-        'card3' : { title: "Cordón del Caulle", img: "/3.mp4" }
+        'card2' : { title: "Cordón del Caulle", img: "/3.mp4" },
+        'card3' : { title: "Volcán", img: "/2.mp4" }
     }
     const idButtons = Object.keys(resources);
 
