--- a/src/components/Section6/Section6.astro
+++ b/src/components/Section6/Section6.astro
@@ -2,10 +2,11 @@
 import Title from '../Title.astro';
 import Slides from './Slides.jsx';
 ---
-<div class="text-center pb-10">
+<div class="text-center pb-10 flex flex-col items-center">
     <div class="border-[#4A5E73] border-b-[10px] px-10 mb-10 inline-block">
         <Title title="Galería" />
     </div>
-
-    <Slides client:load/>
+    <div class="max-w-[1200px]">
+        <Slides client:load/>
+    </div>
 </div>
