--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,4 +51,8 @@ import Footer from '../components/Footer.astro'
 		-webkit-text-stroke: 1.5px #4F4F4F;
 	}
 
+	.swiper-button-prev::after,
+	.swiper-button-next::after {
+		content: "";
+	}
 </style>
