style: ajuste margen

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ const data = [
 ---
 
 <footer class="py-20">
-    <div class="flex px-10">
+    <div class="flex px-geo">
         <div class="w-1/2 flex">
             <div class="w-1/2">
                 <svg width="233" height="4" viewBox="0 0 233 4" fill="none" xmlns="http://www.w3.org/2000/svg">
