--- a/src/components/Section2.astro
+++ b/src/components/Section2.astro
@@ -3,7 +3,7 @@ import Button from "../components/Button.astro";
 import Title from "./Title.astro";
 ---
 
-<div class="flex flex-rows overflow-hidden my-20 px-10">
+<div class="flex flex-rows overflow-hidden my-20 px-geo">
     <div class="flex w-screen">
         <div class="w-1/2">
             <div class="" id="div2">
