--- a/src/components/Header/CardNav.astro
+++ b/src/components/Header/CardNav.astro
@@ -1,6 +1,6 @@
 ---
 const { icon, title, description, background } = Astro.props;
-const divClass = `${background} flex gap-x-5 flex-row w-[100vw] md:[25vw] lg:w-[23vw] text-xs lg:text-sm h-[70px] px-10 py-5 items-center navcard overflow-hidden`;
+const divClass = `${background} flex gap-x-5 flex-row w-[100vw] md:[25vw] lg:w-[23vw] text-xs lg:text-sm h-[70px] px-geo py-5 items-center navcard overflow-hidden`;
 ---
 
 <div class={divClass}>
@@ -32,7 +32,7 @@ const divClass = `${background} flex gap-x-5 flex-row w-[100vw] md:[25vw] lg:w-[
     }
 
     .navcard:hover {
-        padding: 50px 2.5rem;
+        padding: 50px 3.8rem;
         transition: padding 0.3s ease;
     }
 
@@ -56,7 +56,7 @@ const divClass = `${background} flex gap-x-5 flex-row w-[100vw] md:[25vw] lg:w-[
 
         .navcard:hover {
             transition: none;
-            padding:  1.25rem 2.5rem;
+            padding:  1.25rem 3.8rem;
         }
     }
 </style>
