--- a/src/components/Header/Navbar.astro
+++ b/src/components/Header/Navbar.astro
@@ -5,7 +5,7 @@ import '@fontsource/ropa-sans';
 <nav
     class="absolute w-full z-20 top-0 start-0"
 >
-    <div class="max-w-screen-3xl flex flex-wrap items-center justify-between mx-auto py-2 lg:py-4 px-5 lg:px-10">
+    <div class="max-w-screen-3xl flex flex-wrap items-center justify-between mx-auto py-2 lg:py-4 px-5 px-geo">
         <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
             <img
                 src="./logo.png"
