--- a/src/components/Section3/Section3.astro
+++ b/src/components/Section3/Section3.astro
@@ -40,7 +40,7 @@ const cards = [
 ];
 ---
 
-<div class="px-10 pb-20" id="cont-principal">
+<div class="px-geo pb-20" id="cont-principal">
     <div class="border-[#54574E] border-t-[10px] max-w-[600px] pt-5">
         <span
             class="font-nunito uppercase font-black text-[#54574E] text-[1.3rem]"
