--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,6 +36,11 @@ import Footer from '../components/Footer.astro'
 		src: url("/font/RadwaveFont.otf") format("opentype");
 	}
 
+	.px-geo {
+		padding-left: 3.8rem;
+		padding-right: 3.8rem;
+	}
+
 	.font-radwave {
 		font-family: "Radwave";
 	}
