style: responsive section 3

--- a/src/components/Section1.astro
+++ b/src/components/Section1.astro
@@ -5,7 +5,7 @@ import Gallery from './Gallery.jsx';
 
 ---
 
-<div class="relative flex flex-col lg:flex-row h-[90vh] flex-rows lg:overflow-hidden" id="img-section1">
+<div class="relative flex flex-col lg:flex-row min-h-[90vh] flex-rows lg:overflow-hidden" id="img-section1">
     <div class="lg:w-1/2 w-screen">
         <img class="lg:hidden w-screen" src="/section1.png" alt="">
     </div>
