--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Footer from '../components/Footer.astro'
 <Layout title="Geoturismo Contrafuerte" description="Este patrimonio geológico natural de extraordinaria belleza y atractivo, es considerado una de las rutas imperdibles en el país, ha sido protagonista de 3 importantes erupciones en los últimos 100 años, 1921, 1960, 2011, siendo además uno de los principales sitios de exploración geotérmica de Chile.">
 	<Header />
 	<Section1 />
-	<!-- <Section2 /> -->
+	<Section2 />
 	<!-- <Section3 /> -->
 	<!-- <Slides client:load/> -->
 	<!-- <Section5 /> -->
